appId: ${APP_ID}
---
- launchApp
- assertVisible: "React Native.*"
- tapOn: "Restart app"
- waitForAnimationToEnd:
    timeout: 15000
- tapOn:
    text: "(?i)^wait$"
    optional: true
- assertVisible: "React Native.*"
- assertVisible: "Check for updates"
