appId: ${APP_ID}
---
- launchApp
- assertVisible: "UPDATED!"

# Clear updates
- tapOn: "Clear updates"

# Restart to apply
- tapOn: "Restart app"
- waitForAnimationToEnd:
    timeout: 5000

# UPDATED! should be gone
- assertVisible: "React Native.*"
- assertNotVisible: "UPDATED!"